--- a/Mod1/lecture_code_alongs/M1L6-MissingData_STUDENT.ipynb
+++ b/Mod1/lecture_code_alongs/M1L6-MissingData_STUDENT.ipynb
@@ -25,13 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Import packages \n",
-    "\n",
-    "None"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -43,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "None"
+    "df= pd.read_csv(\"Austin_Animal_Center_Intakes__10_01_2013_to_05_05_2025_.csv\")"
    ]
   },
   {
@@ -61,11 +61,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Animal ID           object\n",
+       "Name                object\n",
+       "DateTime            object\n",
+       "MonthYear           object\n",
+       "Found Location      object\n",
+       "Intake Type         object\n",
+       "Intake Condition    object\n",
+       "Animal Type         object\n",
+       "Sex upon Intake     object\n",
+       "Age upon Intake     object\n",
+       "Breed               object\n",
+       "Color               object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "None"
+    "df.head()\n",
+    "df.dtypes"
    ]
   },
   {
@@ -77,12 +101,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Animal ID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>DateTime</th>\n",
+       "      <th>MonthYear</th>\n",
+       "      <th>Found Location</th>\n",
+       "      <th>Intake Type</th>\n",
+       "      <th>Intake Condition</th>\n",
+       "      <th>Animal Type</th>\n",
+       "      <th>Sex upon Intake</th>\n",
+       "      <th>Age upon Intake</th>\n",
+       "      <th>Breed</th>\n",
+       "      <th>Color</th>\n",
+       "      <th>missing_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A521520</td>\n",
+       "      <td>Nina</td>\n",
+       "      <td>10/01/2013 07:51:00 AM</td>\n",
+       "      <td>October 2013</td>\n",
+       "      <td>Norht Ec in Austin (TX)</td>\n",
+       "      <td>Stray</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>Spayed Female</td>\n",
+       "      <td>7 years</td>\n",
+       "      <td>Border Terrier/Border Collie</td>\n",
+       "      <td>White/Tan</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A664235</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10/01/2013 08:33:00 AM</td>\n",
+       "      <td>October 2013</td>\n",
+       "      <td>Abia in Austin (TX)</td>\n",
+       "      <td>Stray</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Cat</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>1 week</td>\n",
+       "      <td>Domestic Shorthair Mix</td>\n",
+       "      <td>Orange/White</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A664236</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10/01/2013 08:33:00 AM</td>\n",
+       "      <td>October 2013</td>\n",
+       "      <td>Abia in Austin (TX)</td>\n",
+       "      <td>Stray</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Cat</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>1 week</td>\n",
+       "      <td>Domestic Shorthair Mix</td>\n",
+       "      <td>Orange/White</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A664237</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10/01/2013 08:33:00 AM</td>\n",
+       "      <td>October 2013</td>\n",
+       "      <td>Abia in Austin (TX)</td>\n",
+       "      <td>Stray</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Cat</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>1 week</td>\n",
+       "      <td>Domestic Shorthair Mix</td>\n",
+       "      <td>Orange/White</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A664233</td>\n",
+       "      <td>Stevie</td>\n",
+       "      <td>10/01/2013 08:53:00 AM</td>\n",
+       "      <td>October 2013</td>\n",
+       "      <td>7405 Springtime in Austin (TX)</td>\n",
+       "      <td>Stray</td>\n",
+       "      <td>Injured</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>Intact Female</td>\n",
+       "      <td>3 years</td>\n",
+       "      <td>Pit Bull Mix</td>\n",
+       "      <td>Blue/White</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Animal ID    Name                DateTime     MonthYear  \\\n",
+       "0   A521520    Nina  10/01/2013 07:51:00 AM  October 2013   \n",
+       "1   A664235     NaN  10/01/2013 08:33:00 AM  October 2013   \n",
+       "2   A664236     NaN  10/01/2013 08:33:00 AM  October 2013   \n",
+       "3   A664237     NaN  10/01/2013 08:33:00 AM  October 2013   \n",
+       "4   A664233  Stevie  10/01/2013 08:53:00 AM  October 2013   \n",
+       "\n",
+       "                   Found Location Intake Type Intake Condition Animal Type  \\\n",
+       "0         Norht Ec in Austin (TX)       Stray           Normal         Dog   \n",
+       "1             Abia in Austin (TX)       Stray           Normal         Cat   \n",
+       "2             Abia in Austin (TX)       Stray           Normal         Cat   \n",
+       "3             Abia in Austin (TX)       Stray           Normal         Cat   \n",
+       "4  7405 Springtime in Austin (TX)       Stray          Injured         Dog   \n",
+       "\n",
+       "  Sex upon Intake Age upon Intake                         Breed         Color  \\\n",
+       "0   Spayed Female         7 years  Border Terrier/Border Collie     White/Tan   \n",
+       "1         Unknown          1 week        Domestic Shorthair Mix  Orange/White   \n",
+       "2         Unknown          1 week        Domestic Shorthair Mix  Orange/White   \n",
+       "3         Unknown          1 week        Domestic Shorthair Mix  Orange/White   \n",
+       "4   Intact Female         3 years                  Pit Bull Mix    Blue/White   \n",
+       "\n",
+       "   missing_name  \n",
+       "0         False  \n",
+       "1          True  \n",
+       "2          True  \n",
+       "3          True  \n",
+       "4         False  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "None\n",
-    "df.head() #optional line to see changes"
+    "df.head() #optional line to see changes\n",
+    "df['missing_name'] = df['Name'].isnull()\n",
+    "df.head()"
    ]
   },
   {
@@ -94,37 +276,236 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/bs/gtwb0lj97nb4v95968dmfzww0000gp/T/ipykernel_49597/143495726.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  df[\"Name\"].fillna(\"UNKNOWN\", inplace=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Animal ID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>DateTime</th>\n",
+       "      <th>MonthYear</th>\n",
+       "      <th>Found Location</th>\n",
+       "      <th>Intake Type</th>\n",
+       "      <th>Intake Condition</th>\n",
+       "      <th>Animal Type</th>\n",
+       "      <th>Sex upon Intake</th>\n",
+       "      <th>Age upon Intake</th>\n",
+       "      <th>Breed</th>\n",
+       "      <th>Color</th>\n",
+       "      <th>missing_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A521520</td>\n",
+       "      <td>Nina</td>\n",
+       "      <td>10/01/2013 07:51:00 AM</td>\n",
+       "      <td>October 2013</td>\n",
+       "      <td>Norht Ec in Austin (TX)</td>\n",
+       "      <td>Stray</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>Spayed Female</td>\n",
+       "      <td>7 years</td>\n",
+       "      <td>Border Terrier/Border Collie</td>\n",
+       "      <td>White/Tan</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A664235</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>10/01/2013 08:33:00 AM</td>\n",
+       "      <td>October 2013</td>\n",
+       "      <td>Abia in Austin (TX)</td>\n",
+       "      <td>Stray</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Cat</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>1 week</td>\n",
+       "      <td>Domestic Shorthair Mix</td>\n",
+       "      <td>Orange/White</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A664236</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>10/01/2013 08:33:00 AM</td>\n",
+       "      <td>October 2013</td>\n",
+       "      <td>Abia in Austin (TX)</td>\n",
+       "      <td>Stray</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Cat</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>1 week</td>\n",
+       "      <td>Domestic Shorthair Mix</td>\n",
+       "      <td>Orange/White</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A664237</td>\n",
+       "      <td>UNKNOWN</td>\n",
+       "      <td>10/01/2013 08:33:00 AM</td>\n",
+       "      <td>October 2013</td>\n",
+       "      <td>Abia in Austin (TX)</td>\n",
+       "      <td>Stray</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>Cat</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>1 week</td>\n",
+       "      <td>Domestic Shorthair Mix</td>\n",
+       "      <td>Orange/White</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A664233</td>\n",
+       "      <td>Stevie</td>\n",
+       "      <td>10/01/2013 08:53:00 AM</td>\n",
+       "      <td>October 2013</td>\n",
+       "      <td>7405 Springtime in Austin (TX)</td>\n",
+       "      <td>Stray</td>\n",
+       "      <td>Injured</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>Intact Female</td>\n",
+       "      <td>3 years</td>\n",
+       "      <td>Pit Bull Mix</td>\n",
+       "      <td>Blue/White</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Animal ID     Name                DateTime     MonthYear  \\\n",
+       "0   A521520     Nina  10/01/2013 07:51:00 AM  October 2013   \n",
+       "1   A664235  UNKNOWN  10/01/2013 08:33:00 AM  October 2013   \n",
+       "2   A664236  UNKNOWN  10/01/2013 08:33:00 AM  October 2013   \n",
+       "3   A664237  UNKNOWN  10/01/2013 08:33:00 AM  October 2013   \n",
+       "4   A664233   Stevie  10/01/2013 08:53:00 AM  October 2013   \n",
+       "\n",
+       "                   Found Location Intake Type Intake Condition Animal Type  \\\n",
+       "0         Norht Ec in Austin (TX)       Stray           Normal         Dog   \n",
+       "1             Abia in Austin (TX)       Stray           Normal         Cat   \n",
+       "2             Abia in Austin (TX)       Stray           Normal         Cat   \n",
+       "3             Abia in Austin (TX)       Stray           Normal         Cat   \n",
+       "4  7405 Springtime in Austin (TX)       Stray          Injured         Dog   \n",
+       "\n",
+       "  Sex upon Intake Age upon Intake                         Breed         Color  \\\n",
+       "0   Spayed Female         7 years  Border Terrier/Border Collie     White/Tan   \n",
+       "1         Unknown          1 week        Domestic Shorthair Mix  Orange/White   \n",
+       "2         Unknown          1 week        Domestic Shorthair Mix  Orange/White   \n",
+       "3         Unknown          1 week        Domestic Shorthair Mix  Orange/White   \n",
+       "4   Intact Female         3 years                  Pit Bull Mix    Blue/White   \n",
+       "\n",
+       "   missing_name  \n",
+       "0         False  \n",
+       "1          True  \n",
+       "2          True  \n",
+       "3          True  \n",
+       "4         False  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "None\n",
-    "df.head() #optional line to see changes "
+    "df.head() #optional line to see changes \n",
+    "df[\"Name\"].fillna(\"UNKNOWN\", inplace=True)\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 6:  There is ony one column with 'Age' missing; let's drop it for now"
+    "## Step 6:  There is only one column with 'Age' missing; let's drop it for now"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 173811 entries, 0 to 173811\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column            Non-Null Count   Dtype \n",
+      "---  ------            --------------   ----- \n",
+      " 0   Animal ID         173811 non-null  object\n",
+      " 1   Name              173811 non-null  object\n",
+      " 2   DateTime          173811 non-null  object\n",
+      " 3   MonthYear         173811 non-null  object\n",
+      " 4   Found Location    173811 non-null  object\n",
+      " 5   Intake Type       173811 non-null  object\n",
+      " 6   Intake Condition  173811 non-null  object\n",
+      " 7   Animal Type       173811 non-null  object\n",
+      " 8   Sex upon Intake   173811 non-null  object\n",
+      " 9   Age upon Intake   173811 non-null  object\n",
+      " 10  Breed             173811 non-null  object\n",
+      " 11  Color             173811 non-null  object\n",
+      " 12  missing_name      173811 non-null  bool  \n",
+      "dtypes: bool(1), object(12)\n",
+      "memory usage: 17.4+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "None\n",
-    "df.info() #optional line to see changes"
+    "df.info() #optional line to see changes\n",
+    "df.dropna(subset=(\"Sex upon Intake\"), inplace=True)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "data-analysis-env",
    "language": "python",
-   "name": "learn-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -136,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.22"
   }
  },
  "nbformat": 4,
